--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="Question4">Em que ordem surgiram os modelos atômicos?</string>
     <string name="Question5">" Quais destas construções famosas ficam nos Estados Unidos?"</string>
     <string name="Question6">" Quais os planetas do sistema solar?"</string>
+    <string name="textFinalAcitivity">Parabens!!!\nA sua pontuação foi:</string>
 </resources>
